--- a/events/1617velv/pa/1617velv-pasw-Rankings.html
+++ b/events/1617velv/pa/1617velv-pasw-Rankings.html
@@ -1,2 +1,26 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Pennsylvania Southwestern<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>6022</TD><TD>TBD - To Be Determined</TD><TD>10</TD><TD>328</TD><TD>400</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>8645</TD><TD>Robotic Doges</TD><TD>8</TD><TD>330</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>8393</TD><TD>BrainSTEM</TD><TD>8</TD><TD>295</TD><TD>120</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>4149</TD><TD>Terabytes</TD><TD>8</TD><TD>286</TD><TD>170</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>9820</TD><TD>Girls of Steel Juniors</TD><TD>8</TD><TD>233</TD><TD>175</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>2818</TD><TD>G-FORCE</TD><TD>8</TD><TD>192</TD><TD>400</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>11210</TD><TD>Infinity Robotechs</TD><TD>6</TD><TD>307</TD><TD>235</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>8509</TD><TD>STEEL Serpents</TD><TD>6</TD><TD>284</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>6961</TD><TD>The Radical Six</TD><TD>6</TD><TD>254</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>7018</TD><TD>Spartans</TD><TD>6</TD><TD>243</TD><TD>140</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>11027</TD><TD>NA First</TD><TD>6</TD><TD>221</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>10083</TD><TD>Mars Robotics</TD><TD>6</TD><TD>174</TD><TD>120</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>8867</TD><TD>Broken Image Link</TD><TD>4</TD><TD>252</TD><TD>150</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>6440</TD><TD>The Metallic Controllers</TD><TD>4</TD><TD>222</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>5526</TD><TD>Quasics</TD><TD>4</TD><TD>222</TD><TD>90</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>7024</TD><TD>young hawks</TD><TD>4</TD><TD>216</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>8257</TD><TD>Fourth River Robotics</TD><TD>4</TD><TD>196</TD><TD>170</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>11792</TD><TD>BotsBurgh</TD><TD>4</TD><TD>180</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>10563</TD><TD>Kiski Cougars</TD><TD>4</TD><TD>155</TD><TD>125</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>9812</TD><TD>T-Noble</TD><TD>2</TD><TD>315</TD><TD>85</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>4933</TD><TD>Short Circuits Too</TD><TD>2</TD><TD>217</TD><TD>72</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>12124</TD><TD>Riverview</TD><TD>2</TD><TD>62</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>3900</TD><TD>Mechasharks</TD><TD>0</TD><TD>210</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>24</TD><TD>6549</TD><TD>Whoa!Bots</TD><TD>0</TD><TD>158</TD><TD>42</TD><TD>5</TD>
 </TABLE></DIV></HTML>
