clean vace results

--- a/events/1617velv/va/1617velv-vaced1-Rankings.html
+++ b/events/1617velv/va/1617velv-vaced1-Rankings.html
@@ -1,50 +1,25 @@
-<HTML>
-<head>
-<style>
-@media print
-{
-  table { page-break-after:auto }
-  tr    { page-break-inside:avoid; page-break-after:auto }
-  td    { page-break-inside:avoid; page-break-after:auto }
-  thead { display:table-header-group }
-  tfoot { display:table-footer-group }
-}
-</style>
-<TITLE>Team Rankings</TITLE>
-</head>
-<CENTER><H2>Central Qualifier<br> Division: Flowers<BR>
-Team Rankings</H2></CENTER>
-<HR>
-<DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%>
-<TR ALIGN=CENTER><TH BGCOLOR="#CCCCCC">Rank</TH><TH BGCOLOR="#CCCCCC">Team #</TH><TH BGCOLOR="#CCCCCC">Team Name</TH><TH BGCOLOR="#CCCCCC">QP</TH><TH BGCOLOR="#CCCCCC">RP</TH><TH BGCOLOR="#CCCCCC">Highest</TH><TH BGCOLOR="#CCCCCC">Matches</TH></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">1</TD><TD BGCOLOR="#FFFFFF">9631</TD><TD BGCOLOR="#FFFFFF"> CyberKnights</TD><TD BGCOLOR="#FFFFFF">10</TD><TD BGCOLOR="#FFFFFF">125</TD><TD BGCOLOR="#FFFFFF">80</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">2</TD><TD BGCOLOR="#CCCCCC">4924</TD><TD BGCOLOR="#CCCCCC"> Tuxedo Pandas</TD><TD BGCOLOR="#CCCCCC">8</TD><TD BGCOLOR="#CCCCCC">90</TD><TD BGCOLOR="#CCCCCC">127</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">3</TD><TD BGCOLOR="#FFFFFF">9918</TD><TD BGCOLOR="#FFFFFF"> RAD</TD><TD BGCOLOR="#FFFFFF">7</TD><TD BGCOLOR="#FFFFFF">104</TD><TD BGCOLOR="#FFFFFF">60</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">4</TD><TD BGCOLOR="#CCCCCC">3804</TD><TD BGCOLOR="#CCCCCC"> Snuffy</TD><TD BGCOLOR="#CCCCCC">7</TD><TD BGCOLOR="#CCCCCC">64</TD><TD BGCOLOR="#CCCCCC">70</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">5</TD><TD BGCOLOR="#FFFFFF">8094</TD><TD BGCOLOR="#FFFFFF"> Robotic Rampage</TD><TD BGCOLOR="#FFFFFF">7</TD><TD BGCOLOR="#FFFFFF">35</TD><TD BGCOLOR="#FFFFFF">55</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">6</TD><TD BGCOLOR="#CCCCCC">7039</TD><TD BGCOLOR="#CCCCCC"> Lord of the Bricks</TD><TD BGCOLOR="#CCCCCC">6</TD><TD BGCOLOR="#CCCCCC">98</TD><TD BGCOLOR="#CCCCCC">100</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">7</TD><TD BGCOLOR="#FFFFFF">8474</TD><TD BGCOLOR="#FFFFFF"> Wolverines</TD><TD BGCOLOR="#FFFFFF">6</TD><TD BGCOLOR="#FFFFFF">68</TD><TD BGCOLOR="#FFFFFF">35</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">8</TD><TD BGCOLOR="#CCCCCC">9069</TD><TD BGCOLOR="#CCCCCC"> F.A.R.</TD><TD BGCOLOR="#CCCCCC">6</TD><TD BGCOLOR="#CCCCCC">34</TD><TD BGCOLOR="#CCCCCC">40</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">9</TD><TD BGCOLOR="#FFFFFF">10362</TD><TD BGCOLOR="#FFFFFF"> Robots in Powhatan</TD><TD BGCOLOR="#FFFFFF">6</TD><TD BGCOLOR="#FFFFFF">26</TD><TD BGCOLOR="#FFFFFF">55</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">10</TD><TD BGCOLOR="#CCCCCC">6124</TD><TD BGCOLOR="#CCCCCC"> Geek Gods</TD><TD BGCOLOR="#CCCCCC">6</TD><TD BGCOLOR="#CCCCCC">11</TD><TD BGCOLOR="#CCCCCC">100</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">11</TD><TD BGCOLOR="#FFFFFF">3668</TD><TD BGCOLOR="#FFFFFF"> Smokie Jr</TD><TD BGCOLOR="#FFFFFF">5</TD><TD BGCOLOR="#FFFFFF">72</TD><TD BGCOLOR="#FFFFFF">75</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">12</TD><TD BGCOLOR="#CCCCCC">12088</TD><TD BGCOLOR="#CCCCCC"> Night Vipers</TD><TD BGCOLOR="#CCCCCC">5</TD><TD BGCOLOR="#CCCCCC">60</TD><TD BGCOLOR="#CCCCCC">55</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">13</TD><TD BGCOLOR="#FFFFFF">7217</TD><TD BGCOLOR="#FFFFFF"> Indomitable Snow People</TD><TD BGCOLOR="#FFFFFF">5</TD><TD BGCOLOR="#FFFFFF">50</TD><TD BGCOLOR="#FFFFFF">30</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">14</TD><TD BGCOLOR="#CCCCCC">8095</TD><TD BGCOLOR="#CCCCCC"> Bulldogs</TD><TD BGCOLOR="#CCCCCC">4</TD><TD BGCOLOR="#CCCCCC">60</TD><TD BGCOLOR="#CCCCCC">75</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">15</TD><TD BGCOLOR="#FFFFFF">10570</TD><TD BGCOLOR="#FFFFFF"> CAT5 Cybercanes</TD><TD BGCOLOR="#FFFFFF">4</TD><TD BGCOLOR="#FFFFFF">48</TD><TD BGCOLOR="#FFFFFF">127</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">16</TD><TD BGCOLOR="#CCCCCC">11368</TD><TD BGCOLOR="#CCCCCC"> RATCOTU</TD><TD BGCOLOR="#CCCCCC">4</TD><TD BGCOLOR="#CCCCCC">37</TD><TD BGCOLOR="#CCCCCC">70</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">17</TD><TD BGCOLOR="#FFFFFF">6295</TD><TD BGCOLOR="#FFFFFF"> Big Bang Robotics</TD><TD BGCOLOR="#FFFFFF">4</TD><TD BGCOLOR="#FFFFFF">22</TD><TD BGCOLOR="#FFFFFF">80</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">18</TD><TD BGCOLOR="#CCCCCC">9337</TD><TD BGCOLOR="#CCCCCC"> Aluminati</TD><TD BGCOLOR="#CCCCCC">4</TD><TD BGCOLOR="#CCCCCC">10</TD><TD BGCOLOR="#CCCCCC">45</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">19</TD><TD BGCOLOR="#FFFFFF">11484</TD><TD BGCOLOR="#FFFFFF">JMHS Robotics</TD><TD BGCOLOR="#FFFFFF">2</TD><TD BGCOLOR="#FFFFFF">40</TD><TD BGCOLOR="#FFFFFF">35</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">20</TD><TD BGCOLOR="#CCCCCC">5648</TD><TD BGCOLOR="#CCCCCC"> Tek Twisters 2.0</TD><TD BGCOLOR="#CCCCCC">2</TD><TD BGCOLOR="#CCCCCC">39</TD><TD BGCOLOR="#CCCCCC">33</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">21</TD><TD BGCOLOR="#FFFFFF">975</TD><TD BGCOLOR="#FFFFFF"> Synergy</TD><TD BGCOLOR="#FFFFFF">2</TD><TD BGCOLOR="#FFFFFF">25</TD><TD BGCOLOR="#FFFFFF">40</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">22</TD><TD BGCOLOR="#CCCCCC">7862</TD><TD BGCOLOR="#CCCCCC"> Avengineers</TD><TD BGCOLOR="#CCCCCC">0</TD><TD BGCOLOR="#CCCCCC">35</TD><TD BGCOLOR="#CCCCCC">15</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">23</TD><TD BGCOLOR="#FFFFFF">11991</TD><TD BGCOLOR="#FFFFFF"> Norfolk Technical Center</TD><TD BGCOLOR="#FFFFFF">0</TD><TD BGCOLOR="#FFFFFF">0</TD><TD BGCOLOR="#FFFFFF">0</TD><TD BGCOLOR="#FFFFFF">0</TD></TR>
-</TABLE></DIV>
-<hr>
-<P><B>QP (Total Qualification Points)</B> -  2 Points for a WIN, 1 Point for a TIE, 0 Points for a LOSS.</P>
-<P><B>RP (Total Ranking Points)</B> - Ranking points are awarded using the losing alliance's score in each match.</P>
-<P><B>Highest (Highest Match Score)</B> - The highest match score awarded to the team.</P>
-<CENTER><SMALL>FTC Scoring Software &copy; 2016-2017 <i>FIRST&reg;</i></CENTER></SMALL>
-<CENTER><SMALL>Team Rankings generated at 12/03/16 06:39:30 PM</SMALL></CENTER>
-</HTML>
+<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Virginia Central Flowers<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>9631</TD><TD>CyberKnights</TD><TD>10</TD><TD>135</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>4924</TD><TD>Tuxedo Pandas</TD><TD>8</TD><TD>140</TD><TD>127</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>9918</TD><TD>RAD</TD><TD>7</TD><TD>114</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>8094</TD><TD>Robotic Rampage</TD><TD>7</TD><TD>85</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>3804</TD><TD>Team Snuffleupagus</TD><TD>7</TD><TD>74</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>7039</TD><TD>Lord of the Bricks</TD><TD>6</TD><TD>98</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>8474</TD><TD>Wolverines</TD><TD>6</TD><TD>78</TD><TD>35</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>11991</TD><TD>Futaba B</TD><TD>6</TD><TD>52</TD><TD>45</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>10362</TD><TD>RIP: Robots in Powhatan</TD><TD>6</TD><TD>36</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>9069</TD><TD>F.A.R.</TD><TD>6</TD><TD>34</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>6124</TD><TD>Geek Gods</TD><TD>6</TD><TD>11</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>3668</TD><TD>Smokie Jr.</TD><TD>5</TD><TD>72</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>12088</TD><TD>NIght Vipers</TD><TD>5</TD><TD>60</TD><TD>55</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>7217</TD><TD>Hail Hydraulics</TD><TD>5</TD><TD>50</TD><TD>30</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>8095</TD><TD>Bulldogs</TD><TD>4</TD><TD>90</TD><TD>75</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>10570</TD><TD>CAT5 CyberCanes</TD><TD>4</TD><TD>88</TD><TD>127</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>11368</TD><TD>Robots at the Center of the Universe RATCOTU</TD><TD>4</TD><TD>37</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>6295</TD><TD>Big Bang Robotics</TD><TD>4</TD><TD>22</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>9337</TD><TD>Aluminati</TD><TD>4</TD><TD>20</TD><TD>45</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>975</TD><TD>Synergy</TD><TD>2</TD><TD>65</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>11484</TD><TD>JMHS Robotics</TD><TD>2</TD><TD>40</TD><TD>35</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>5648</TD><TD>TekTwisters 2.0</TD><TD>2</TD><TD>39</TD><TD>33</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>7862</TD><TD>Avengineers</TD><TD>0</TD><TD>45</TD><TD>15</TD><TD>5</TD>
+</TABLE></DIV></HTML>
