--- a/events/1617velv/va/1617velv-vaced2-Rankings.html
+++ b/events/1617velv/va/1617velv-vaced2-Rankings.html
@@ -1,50 +1,25 @@
-<HTML>
-<head>
-<style>
-@media print
-{
-  table { page-break-after:auto }
-  tr    { page-break-inside:avoid; page-break-after:auto }
-  td    { page-break-inside:avoid; page-break-after:auto }
-  thead { display:table-header-group }
-  tfoot { display:table-footer-group }
-}
-</style>
-<TITLE>Team Rankings</TITLE>
-</head>
-<CENTER><H2>Central Qualifier<br> Division: Kamen<BR>
-Team Rankings</H2></CENTER>
-<HR>
-<DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%>
-<TR ALIGN=CENTER><TH BGCOLOR="#CCCCCC">Rank</TH><TH BGCOLOR="#CCCCCC">Team #</TH><TH BGCOLOR="#CCCCCC">Team Name</TH><TH BGCOLOR="#CCCCCC">QP</TH><TH BGCOLOR="#CCCCCC">RP</TH><TH BGCOLOR="#CCCCCC">Highest</TH><TH BGCOLOR="#CCCCCC">Matches</TH></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">1</TD><TD BGCOLOR="#FFFFFF">3749</TD><TD BGCOLOR="#FFFFFF"> Bionic Penguins</TD><TD BGCOLOR="#FFFFFF">8</TD><TD BGCOLOR="#FFFFFF">147</TD><TD BGCOLOR="#FFFFFF">60</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">2</TD><TD BGCOLOR="#CCCCCC">8275</TD><TD BGCOLOR="#CCCCCC"> Tech Busters</TD><TD BGCOLOR="#CCCCCC">8</TD><TD BGCOLOR="#CCCCCC">125</TD><TD BGCOLOR="#CCCCCC">80</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">3</TD><TD BGCOLOR="#FFFFFF">6481</TD><TD BGCOLOR="#FFFFFF"> Technomancers</TD><TD BGCOLOR="#FFFFFF">8</TD><TD BGCOLOR="#FFFFFF">97</TD><TD BGCOLOR="#FFFFFF">50</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">4</TD><TD BGCOLOR="#CCCCCC">6158</TD><TD BGCOLOR="#CCCCCC"> Spartabots</TD><TD BGCOLOR="#CCCCCC">8</TD><TD BGCOLOR="#CCCCCC">83</TD><TD BGCOLOR="#CCCCCC">60</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">5</TD><TD BGCOLOR="#FFFFFF">9202</TD><TD BGCOLOR="#FFFFFF"> Her Majesty's Engineers</TD><TD BGCOLOR="#FFFFFF">8</TD><TD BGCOLOR="#FFFFFF">78</TD><TD BGCOLOR="#FFFFFF">60</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">6</TD><TD BGCOLOR="#CCCCCC">10567</TD><TD BGCOLOR="#CCCCCC"> Voltage </TD><TD BGCOLOR="#CCCCCC">8</TD><TD BGCOLOR="#CCCCCC">73</TD><TD BGCOLOR="#CCCCCC">37</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">7</TD><TD BGCOLOR="#FFFFFF">7844</TD><TD BGCOLOR="#FFFFFF"> Fork Union Ratchet Robotics</TD><TD BGCOLOR="#FFFFFF">6</TD><TD BGCOLOR="#FFFFFF">107</TD><TD BGCOLOR="#FFFFFF">80</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">8</TD><TD BGCOLOR="#CCCCCC">6027</TD><TD BGCOLOR="#CCCCCC"> L.E.D. Empire</TD><TD BGCOLOR="#CCCCCC">6</TD><TD BGCOLOR="#CCCCCC">81</TD><TD BGCOLOR="#CCCCCC">35</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">9</TD><TD BGCOLOR="#FFFFFF">12017</TD><TD BGCOLOR="#FFFFFF"> Lucille Brown Middle School</TD><TD BGCOLOR="#FFFFFF">6</TD><TD BGCOLOR="#FFFFFF">50</TD><TD BGCOLOR="#FFFFFF">130</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">10</TD><TD BGCOLOR="#CCCCCC">8910</TD><TD BGCOLOR="#CCCCCC"> Veritas School</TD><TD BGCOLOR="#CCCCCC">5</TD><TD BGCOLOR="#CCCCCC">85</TD><TD BGCOLOR="#CCCCCC">65</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">11</TD><TD BGCOLOR="#FFFFFF">364</TD><TD BGCOLOR="#FFFFFF"> Warrior Geeks</TD><TD BGCOLOR="#FFFFFF">5</TD><TD BGCOLOR="#FFFFFF">28</TD><TD BGCOLOR="#FFFFFF">40</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">12</TD><TD BGCOLOR="#CCCCCC">7090</TD><TD BGCOLOR="#CCCCCC"> FIRST Appalacian Robotics</TD><TD BGCOLOR="#CCCCCC">4</TD><TD BGCOLOR="#CCCCCC">95</TD><TD BGCOLOR="#CCCCCC">35</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">13</TD><TD BGCOLOR="#FFFFFF">12012</TD><TD BGCOLOR="#FFFFFF"> Nescio</TD><TD BGCOLOR="#FFFFFF">4</TD><TD BGCOLOR="#FFFFFF">83</TD><TD BGCOLOR="#FFFFFF">65</TD><TD BGCOLOR="#FFFFFF">4</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">14</TD><TD BGCOLOR="#CCCCCC">11422</TD><TD BGCOLOR="#CCCCCC"> Tunstall Titans</TD><TD BGCOLOR="#CCCCCC">4</TD><TD BGCOLOR="#CCCCCC">72</TD><TD BGCOLOR="#CCCCCC">40</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">15</TD><TD BGCOLOR="#FFFFFF">5431</TD><TD BGCOLOR="#FFFFFF"> Royal Phoenix</TD><TD BGCOLOR="#FFFFFF">4</TD><TD BGCOLOR="#FFFFFF">68</TD><TD BGCOLOR="#FFFFFF">60</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">16</TD><TD BGCOLOR="#CCCCCC">4323</TD><TD BGCOLOR="#CCCCCC"> iCATZ</TD><TD BGCOLOR="#CCCCCC">4</TD><TD BGCOLOR="#CCCCCC">67</TD><TD BGCOLOR="#CCCCCC">130</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">17</TD><TD BGCOLOR="#FFFFFF">11209</TD><TD BGCOLOR="#FFFFFF"> Code Crushing Griffins</TD><TD BGCOLOR="#FFFFFF">4</TD><TD BGCOLOR="#FFFFFF">45</TD><TD BGCOLOR="#FFFFFF">60</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">18</TD><TD BGCOLOR="#CCCCCC">9422</TD><TD BGCOLOR="#CCCCCC"> Steve & Co.</TD><TD BGCOLOR="#CCCCCC">4</TD><TD BGCOLOR="#CCCCCC">31</TD><TD BGCOLOR="#CCCCCC">45</TD><TD BGCOLOR="#CCCCCC">4</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">19</TD><TD BGCOLOR="#FFFFFF">11700</TD><TD BGCOLOR="#FFFFFF"> aiSeahorses</TD><TD BGCOLOR="#FFFFFF">3</TD><TD BGCOLOR="#FFFFFF">36</TD><TD BGCOLOR="#FFFFFF">45</TD><TD BGCOLOR="#FFFFFF">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">20</TD><TD BGCOLOR="#CCCCCC">9882</TD><TD BGCOLOR="#CCCCCC"> Spegonauts</TD><TD BGCOLOR="#CCCCCC">2</TD><TD BGCOLOR="#CCCCCC">50</TD><TD BGCOLOR="#CCCCCC">20</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">21</TD><TD BGCOLOR="#FFFFFF">12019</TD><TD BGCOLOR="#FFFFFF"> Boushall Middle School</TD><TD BGCOLOR="#FFFFFF">2</TD><TD BGCOLOR="#FFFFFF">37</TD><TD BGCOLOR="#FFFFFF">25</TD><TD BGCOLOR="#FFFFFF">4</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#CCCCCC">22</TD><TD BGCOLOR="#CCCCCC">10306</TD><TD BGCOLOR="#CCCCCC"> Seahorses</TD><TD BGCOLOR="#CCCCCC">0</TD><TD BGCOLOR="#CCCCCC">53</TD><TD BGCOLOR="#CCCCCC">25</TD><TD BGCOLOR="#CCCCCC">5</TD></TR>
-<TR  ALIGN=CENTER><TD BGCOLOR="#FFFFFF">23</TD><TD BGCOLOR="#FFFFFF">3116</TD><TD BGCOLOR="#FFFFFF"> robowarriors</TD><TD BGCOLOR="#FFFFFF">0</TD><TD BGCOLOR="#FFFFFF">20</TD><TD BGCOLOR="#FFFFFF">10</TD><TD BGCOLOR="#FFFFFF">4</TD></TR>
-</TABLE></DIV>
-<hr>
-<P><B>QP (Total Qualification Points)</B> -  2 Points for a WIN, 1 Point for a TIE, 0 Points for a LOSS.</P>
-<P><B>RP (Total Ranking Points)</B> - Ranking points are awarded using the losing alliance's score in each match.</P>
-<P><B>Highest (Highest Match Score)</B> - The highest match score awarded to the team.</P>
-<CENTER><SMALL>FTC Scoring Software &copy; 2016-2017 <i>FIRST&reg;</i></CENTER></SMALL>
-<CENTER><SMALL>Team Rankings generated at 12/03/16 06:40:32 PM</SMALL></CENTER>
-</HTML>
+<HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Virginia Central Kamen<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
+<TR  ALIGN=CENTER><TD>1</TD><TD>3749</TD><TD>Bionic Penguins</TD><TD>8</TD><TD>147</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>8275</TD><TD>Tech Busters</TD><TD>8</TD><TD>125</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>6481</TD><TD>TechnoMancers</TD><TD>8</TD><TD>97</TD><TD>50</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>6158</TD><TD>Spartabots</TD><TD>8</TD><TD>93</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>9202</TD><TD>Her Majesty's Engineers</TD><TD>8</TD><TD>78</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>10567</TD><TD>Voltage</TD><TD>8</TD><TD>73</TD><TD>37</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>7844</TD><TD>Ratchet Bots</TD><TD>6</TD><TD>117</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>6027</TD><TD>L.E.D. Empire</TD><TD>6</TD><TD>81</TD><TD>35</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>12017</TD><TD>Lucille Murray Brown Middle School</TD><TD>6</TD><TD>60</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>8910</TD><TD>Veritas School</TD><TD>5</TD><TD>85</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>364</TD><TD>Warrior Geeks</TD><TD>5</TD><TD>28</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>7090</TD><TD>First Appalachian Robotics</TD><TD>4</TD><TD>95</TD><TD>35</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>13</TD><TD>12012</TD><TD>Nescio</TD><TD>4</TD><TD>93</TD><TD>65</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>14</TD><TD>12019</TD><TD>Boushall Middle School</TD><TD>4</TD><TD>82</TD><TD>50</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>15</TD><TD>11422</TD><TD>Tunstall Titans</TD><TD>4</TD><TD>82</TD><TD>40</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>16</TD><TD>5431</TD><TD>Royal Phoenix</TD><TD>4</TD><TD>68</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>17</TD><TD>4323</TD><TD>iCATZ</TD><TD>4</TD><TD>67</TD><TD>130</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>18</TD><TD>11209</TD><TD>Code Crushing Griffins</TD><TD>4</TD><TD>55</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>19</TD><TD>9422</TD><TD>Steve & Friends INC.</TD><TD>4</TD><TD>31</TD><TD>45</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>20</TD><TD>11700</TD><TD>AISeahorse</TD><TD>3</TD><TD>36</TD><TD>45</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>21</TD><TD>9882</TD><TD>Spegonauts</TD><TD>2</TD><TD>60</TD><TD>20</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>22</TD><TD>3116</TD><TD>Robo Warriors</TD><TD>1</TD><TD>30</TD><TD>10</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>23</TD><TD>10306</TD><TD>Seahorses</TD><TD>0</TD><TD>53</TD><TD>25</TD><TD>5</TD>
+</TABLE></DIV></HTML>
