TX AML M1 w/ details, CALA F1M2 correct, but w/ results only

--- a/events/1617velv/tx/1617velv-txamlh1-Rankings.html
+++ b/events/1617velv/tx/1617velv-txamlh1-Rankings.html
@@ -1,14 +1,14 @@
 <HTML><head><style>@media print{  table { page-break-after:auto }  tr    { page-break-inside:avoid; page-break-after:auto }  td    { page-break-inside:avoid; page-break-after:auto }  thead { display:table-header-group }  tfoot { display:table-footer-group }}</style><TITLE>Team Rankings</TITLE></head><CENTER><H2>Texas AML Hearts Meet 1<BR>Team Rankings</H2></CENTER><HR><DIV ALIGN=CENTER><TABLE BORDER=2 CELLPADDING=5 CELLSPACING=1 WIDTH=75%><TR ALIGN=CENTER><TH>Rank</TH><TH>Team #</TH><TH>Team Name</TH><TH>QP</TH><TH>RP</TH><TH>Highest</TH><TH>Matches</TH></TR>
-<TR  ALIGN=CENTER><TD>1</TD><TD>7161</TD><TD>ViperBots Hydra</TD><TD>10</TD><TD>161</TD><TD>90</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>2</TD><TD>6299</TD><TD>ViperBots QuadX</TD><TD>8</TD><TD>192</TD><TD>90</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>3</TD><TD>7064</TD><TD>Techno Inferno</TD><TD>7</TD><TD>155</TD><TD>80</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>4</TD><TD>8815</TD><TD>Iron Eagles Silverbolt</TD><TD>6</TD><TD>145</TD><TD>85</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>5</TD><TD>8814</TD><TD>Iron Eagles Guardian</TD><TD>6</TD><TD>130</TD><TD>100</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>6</TD><TD>4812</TD><TD>ROBUFFS Team One</TD><TD>6</TD><TD>55</TD><TD>90</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>7</TD><TD>11549</TD><TD>Rhomans</TD><TD>5</TD><TD>91</TD><TD>70</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>8</TD><TD>11345</TD><TD>Toothless</TD><TD>4</TD><TD>84</TD><TD>100</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>9</TD><TD>4723</TD><TD>Raider Two</TD><TD>3</TD><TD>83</TD><TD>85</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>10</TD><TD>5998</TD><TD>LASA Ultra Violet</TD><TD>2</TD><TD>141</TD><TD>60</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>11</TD><TD>8048</TD><TD>404 Not Found</TD><TD>2</TD><TD>103</TD><TD>80</TD><TD>5</TD>
-<TR  ALIGN=CENTER><TD>12</TD><TD>7797</TD><TD>Victorian Voltage</TD><TD>1</TD><TD>56</TD><TD>21</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>1</TD><TD>11093</TD><TD>MegaKnytes</TD><TD>9</TD><TD>171</TD><TD>84</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>2</TD><TD>8886</TD><TD>Saber Robotics</TD><TD>8</TD><TD>225</TD><TD>95</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>3</TD><TD>3708</TD><TD>Iron Eagles Optimus</TD><TD>8</TD><TD>225</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>4</TD><TD>6710</TD><TD>Sigmas</TD><TD>8</TD><TD>175</TD><TD>84</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>5</TD><TD>6272</TD><TD>Iron Eagles Prime</TD><TD>5</TD><TD>236</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>6</TD><TD>11019</TD><TD>RRock^3</TD><TD>5</TD><TD>216</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>7</TD><TD>6210</TD><TD>ViperBots Stryke</TD><TD>4</TD><TD>220</TD><TD>80</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>8</TD><TD>5628</TD><TD>The Tau Manifesto</TD><TD>4</TD><TD>215</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>9</TD><TD>11090</TD><TD>Chaos Monkeyz</TD><TD>4</TD><TD>155</TD><TD>100</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>10</TD><TD>11404</TD><TD>Ballistic Botz</TD><TD>2</TD><TD>190</TD><TD>70</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>11</TD><TD>11918</TD><TD>Grizzly Bots</TD><TD>2</TD><TD>130</TD><TD>60</TD><TD>5</TD>
+<TR  ALIGN=CENTER><TD>12</TD><TD>9875</TD><TD>LASA MurPHy</TD><TD>1</TD><TD>166</TD><TD>61</TD><TD>5</TD>
 </TABLE></DIV></HTML>
